parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    TRUE
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     block_statement -> { statement_list }
Rule 5     statement -> all_prints
Rule 6     statement -> assign
Rule 7     statement -> if_statement
Rule 8     statement -> for
Rule 9     statement -> expression
Rule 10    all_prints -> print
Rule 11    all_prints -> println
Rule 12    all_prints -> printf
Rule 13    all_prints -> fmt_print
Rule 14    all_prints -> fmt_println
Rule 15    all_prints -> fmt_printf
Rule 16    if_statement -> IF assign block_statement ELSE block_statement
Rule 17    for -> FOR assign block_statement
Rule 18    expression -> number
Rule 19    expression -> name
Rule 20    expression -> assign
Rule 21    expression -> expression PLUS expression
Rule 22    expression -> expression MINUS expression
Rule 23    expression -> expression TIMES expression
Rule 24    expression -> expression DIVIDE expression
Rule 25    expression -> expression MOD expression
Rule 26    expression -> expression LT expression
Rule 27    expression -> expression LE expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression NEQ expression
Rule 30    expression -> expression GE expression
Rule 31    expression -> expression GT expression
Rule 32    expression -> expression , expression
Rule 33    expression -> ( expression )
Rule 34    expression -> - expression
Rule 35    number -> NUMBER
Rule 36    name -> NAME
Rule 37    assign -> name = expression
Rule 38    assign -> name GT expression
Rule 39    assign -> name LT expression
Rule 40    expression -> string
Rule 41    string -> SQ_STRING
Rule 42    string -> DQ_STRING
Rule 43    print -> PRINT ( expression )
Rule 44    println -> PRINTLN ( expression )
Rule 45    printf -> PRINTF ( expression )
Rule 46    fmt_print -> FMT_PRINT ( expression )
Rule 47    fmt_println -> FMT_PRINTLN ( expression )
Rule 48    fmt_printf -> FMT_PRINTF ( expression )
Rule 49    expression -> ABS ( expression )
Rule 50    expression -> SIN ( expression )
Rule 51    expression -> COS ( expression )
Rule 52    expression -> TAN ( expression )
Rule 53    expression -> MIN ( expression , expression )
Rule 54    expression -> MAX ( expression , expression )

Terminals, with rules where they appear

(                    : 33 43 44 45 46 47 48 49 50 51 52 53 54
)                    : 33 43 44 45 46 47 48 49 50 51 52 53 54
,                    : 32 53 54
-                    : 34
=                    : 37
ABS                  : 49
COS                  : 51
DIVIDE               : 24
DQ_STRING            : 42
ELSE                 : 16
EQ                   : 28
FALSE                : 
FMT_PRINT            : 46
FMT_PRINTF           : 48
FMT_PRINTLN          : 47
FOR                  : 17
GE                   : 30
GT                   : 31 38
IF                   : 16
LE                   : 27
LT                   : 26 39
MAX                  : 54
MIN                  : 53
MINUS                : 22
MOD                  : 25
NAME                 : 36
NEQ                  : 29
NUMBER               : 35
PLUS                 : 21
PRINT                : 43
PRINTF               : 45
PRINTLN              : 44
SIN                  : 50
SQ_STRING            : 41
TAN                  : 52
TIMES                : 23
TRUE                 : 
UMINUS               : 
error                : 
{                    : 4
}                    : 4

Nonterminals, with rules where they appear

all_prints           : 5
assign               : 6 16 17 20
block_statement      : 16 16 17
expression           : 9 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 37 38 39 43 44 45 46 47 48 49 50 51 52 53 53 54 54
fmt_print            : 13
fmt_printf           : 15
fmt_println          : 14
for                  : 8
if_statement         : 7
name                 : 19 37 38 39
number               : 18
print                : 10
printf               : 12
println              : 11
program              : 0
statement            : 2 3
statement_list       : 1 2 4
string               : 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (5) statement -> . all_prints
    (6) statement -> . assign
    (7) statement -> . if_statement
    (8) statement -> . for
    (9) statement -> . expression
    (10) all_prints -> . print
    (11) all_prints -> . println
    (12) all_prints -> . printf
    (13) all_prints -> . fmt_print
    (14) all_prints -> . fmt_println
    (15) all_prints -> . fmt_printf
    (37) assign -> . name = expression
    (38) assign -> . name GT expression
    (39) assign -> . name LT expression
    (16) if_statement -> . IF assign block_statement ELSE block_statement
    (17) for -> . FOR assign block_statement
    (18) expression -> . number
    (19) expression -> . name
    (20) expression -> . assign
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression GT expression
    (32) expression -> . expression , expression
    (33) expression -> . ( expression )
    (34) expression -> . - expression
    (40) expression -> . string
    (49) expression -> . ABS ( expression )
    (50) expression -> . SIN ( expression )
    (51) expression -> . COS ( expression )
    (52) expression -> . TAN ( expression )
    (53) expression -> . MIN ( expression , expression )
    (54) expression -> . MAX ( expression , expression )
    (43) print -> . PRINT ( expression )
    (44) println -> . PRINTLN ( expression )
    (45) printf -> . PRINTF ( expression )
    (46) fmt_print -> . FMT_PRINT ( expression )
    (47) fmt_println -> . FMT_PRINTLN ( expression )
    (48) fmt_printf -> . FMT_PRINTF ( expression )
    (36) name -> . NAME
    (35) number -> . NUMBER
    (41) string -> . SQ_STRING
    (42) string -> . DQ_STRING

    IF              shift and go to state 16
    FOR             shift and go to state 17
    (               shift and go to state 19
    -               shift and go to state 20
    ABS             shift and go to state 22
    SIN             shift and go to state 23
    COS             shift and go to state 24
    TAN             shift and go to state 25
    MIN             shift and go to state 26
    MAX             shift and go to state 27
    PRINT           shift and go to state 28
    PRINTLN         shift and go to state 29
    PRINTF          shift and go to state 30
    FMT_PRINT       shift and go to state 31
    FMT_PRINTLN     shift and go to state 32
    FMT_PRINTF      shift and go to state 33
    NAME            shift and go to state 34
    NUMBER          shift and go to state 35
    SQ_STRING       shift and go to state 36
    DQ_STRING       shift and go to state 37

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    all_prints                     shift and go to state 4
    assign                         shift and go to state 5
    if_statement                   shift and go to state 6
    for                            shift and go to state 7
    expression                     shift and go to state 8
    print                          shift and go to state 9
    println                        shift and go to state 10
    printf                         shift and go to state 11
    fmt_print                      shift and go to state 12
    fmt_println                    shift and go to state 13
    fmt_printf                     shift and go to state 14
    name                           shift and go to state 15
    number                         shift and go to state 18
    string                         shift and go to state 21

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (5) statement -> . all_prints
    (6) statement -> . assign
    (7) statement -> . if_statement
    (8) statement -> . for
    (9) statement -> . expression
    (10) all_prints -> . print
    (11) all_prints -> . println
    (12) all_prints -> . printf
    (13) all_prints -> . fmt_print
    (14) all_prints -> . fmt_println
    (15) all_prints -> . fmt_printf
    (37) assign -> . name = expression
    (38) assign -> . name GT expression
    (39) assign -> . name LT expression
    (16) if_statement -> . IF assign block_statement ELSE block_statement
    (17) for -> . FOR assign block_statement
    (18) expression -> . number
    (19) expression -> . name
    (20) expression -> . assign
    (21) expression -> . expression PLUS expression
    (22) expression -> . expression MINUS expression
    (23) expression -> . expression TIMES expression
    (24) expression -> . expression DIVIDE expression
    (25) expression -> . expression MOD expression
    (26) expression -> . expression LT expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NEQ expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression GT expression
    (32) expression -> . expression , expression
    (33) expression -> . ( expression )
    (34) expression -> . - expression
    (40) expression -> . string
    (49) expression -> . ABS ( expression )
    (50) expression -> . SIN ( expression )
    (51) expression -> . COS ( expression )
    (52) expression -> . TAN ( expression )
    (53) expression -> . MIN ( expression , expression )
    (54) expression -> . MAX ( expression , expression )
    (43) print -> . PRINT ( expression )
    (44) println -> . PRINTLN ( expression )
    (45) printf -> . PRINTF ( expression )
    (46) fmt_print -> . FMT_PRINT ( expression )
    (47) fmt_println -> . FMT_PRINTLN ( expression )
    (48) fmt_printf -> . FMT_PRINTF ( expression )
    (36) name -> . NAME
    (35) number -> . NUMBER
    (41) string -> . SQ_STRING
    (42) string -> . DQ_STRING

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 16
    FOR             shift and go to state 17
    (               shift and go to state 19
    -               shift and go to state 20
    ABS             shift and go to state 22
    SIN             shift and go to state 23
    COS             shift and go to state 24
    TAN             shift and go to state 25
    MIN             shift and go to state 26
    MAX             shift and go to state 27
    PRINT           shift and go to state 28
    PRINTLN         shift and go to state 29
    PRINTF          shift and go to state 30
    FMT_PRINT       shift and go to state 31
    FMT_PRINTLN     shift and go to state 32
    FMT_PRINTF      shift and go to state 33
    NAME            shift and go to state 34
    NUMBER          shift and go to state 35
    SQ_STRING       shift and go to state 36
    DQ_STRING       shift and go to state 37

    statement                      shift and go to state 38
    all_prints                     shift and go to state 4
    assign                         shift and go to state 5
    if_statement                   shift and go to state 6
    for                            shift and go to state 7
    expression                     shift and go to state 8
    print                          shift and go to state 9
    println                        shift and go to state 10
    printf                         shift and go to state 11
    fmt_print                      shift and go to state 12
    fmt_println                    shift and go to state 13
    fmt_printf                     shift and go to state 14
    name                           shift and go to state 15
    number                         shift and go to state 18
    string                         shift and go to state 21

state 3

    (3) statement_list -> statement .

    IF              reduce using rule 3 (statement_list -> statement .)
    FOR             reduce using rule 3 (statement_list -> statement .)
    (               reduce using rule 3 (statement_list -> statement .)
    -               reduce using rule 3 (statement_list -> statement .)
    ABS             reduce using rule 3 (statement_list -> statement .)
    SIN             reduce using rule 3 (statement_list -> statement .)
    COS             reduce using rule 3 (statement_list -> statement .)
    TAN             reduce using rule 3 (statement_list -> statement .)
    MIN             reduce using rule 3 (statement_list -> statement .)
    MAX             reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    PRINTLN         reduce using rule 3 (statement_list -> statement .)
    PRINTF          reduce using rule 3 (statement_list -> statement .)
    FMT_PRINT       reduce using rule 3 (statement_list -> statement .)
    FMT_PRINTLN     reduce using rule 3 (statement_list -> statement .)
    FMT_PRINTF      reduce using rule 3 (statement_list -> statement .)
    NAME            reduce using rule 3 (statement_list -> statement .)
    NUMBER          reduce using rule 3 (statement_list -> statement .)
    SQ_STRING       reduce using rule 3 (statement_list -> statement .)
    DQ_STRING       reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    }               reduce using rule 3 (statement_list -> statement .)


state 4

    (5) statement -> all_prints .

    IF              reduce using rule 5 (statement -> all_prints .)
    FOR             reduce using rule 5 (statement -> all_prints .)
    (               reduce using rule 5 (statement -> all_prints .)
    -               reduce using rule 5 (statement -> all_prints .)
    ABS             reduce using rule 5 (statement -> all_prints .)
    SIN             reduce using rule 5 (statement -> all_prints .)
    COS             reduce using rule 5 (statement -> all_prints .)
    TAN             reduce using rule 5 (statement -> all_prints .)
    MIN             reduce using rule 5 (statement -> all_prints .)
    MAX             reduce using rule 5 (statement -> all_prints .)
    PRINT           reduce using rule 5 (statement -> all_prints .)
    PRINTLN         reduce using rule 5 (statement -> all_prints .)
    PRINTF          reduce using rule 5 (statement -> all_prints .)
    FMT_PRINT       reduce using rule 5 (statement -> all_prints .)
    FMT_PRINTLN     reduce using rule 5 (statement -> all_prints .)
    FMT_PRINTF      reduce using rule 5 (statement -> all_prints .)
    NAME            reduce using rule 5 (statement -> all_prints .)
    NUMBER          reduce using rule 5 (statement -> all_prints .)
    SQ_STRING       reduce using rule 5 (statement -> all_prints .)
    DQ_STRING       reduce using rule 5 (statement -> all_prints .)
    $end            reduce using rule 5 (statement -> all_prints .)
    }               reduce using rule 5 (statement -> all_prints .)


state 5

    (6) statement -> assign .
    (20) expression -> assign .

  ! reduce/reduce conflict for IF resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for FOR resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for ( resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for - resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for ABS resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for SIN resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for COS resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for TAN resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for MIN resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for MAX resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for PRINT resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for PRINTLN resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for PRINTF resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for FMT_PRINT resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for FMT_PRINTLN resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for FMT_PRINTF resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for NAME resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for NUMBER resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for SQ_STRING resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for DQ_STRING resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for $end resolved using rule 6 (statement -> assign .)
  ! reduce/reduce conflict for } resolved using rule 6 (statement -> assign .)
    IF              reduce using rule 6 (statement -> assign .)
    FOR             reduce using rule 6 (statement -> assign .)
    (               reduce using rule 6 (statement -> assign .)
    -               reduce using rule 6 (statement -> assign .)
    ABS             reduce using rule 6 (statement -> assign .)
    SIN             reduce using rule 6 (statement -> assign .)
    COS             reduce using rule 6 (statement -> assign .)
    TAN             reduce using rule 6 (statement -> assign .)
    MIN             reduce using rule 6 (statement -> assign .)
    MAX             reduce using rule 6 (statement -> assign .)
    PRINT           reduce using rule 6 (statement -> assign .)
    PRINTLN         reduce using rule 6 (statement -> assign .)
    PRINTF          reduce using rule 6 (statement -> assign .)
    FMT_PRINT       reduce using rule 6 (statement -> assign .)
    FMT_PRINTLN     reduce using rule 6 (statement -> assign .)
    FMT_PRINTF      reduce using rule 6 (statement -> assign .)
    NAME            reduce using rule 6 (statement -> assign .)
    NUMBER          reduce using rule 6 (statement -> assign .)
    SQ_STRING       reduce using rule 6 (statement -> assign .)
    DQ_STRING       reduce using rule 6 (statement -> assign .)
    $end            reduce using rule 6 (statement -> assign .)
    }               reduce using rule 6 (statement -> assign .)
    PLUS            reduce using rule 20 (expression -> assign .)
    MINUS           reduce using rule 20 (expression -> assign .)
    TIMES           reduce using rule 20 (expression -> assign .)
    DIVIDE          reduce using rule 20 (expression -> assign .)
    MOD             reduce using rule 20 (expression -> assign .)
    LT              reduce using rule 20 (expression -> assign .)
    LE              reduce using rule 20 (expression -> assign .)
    EQ              reduce using rule 20 (expression -> assign .)
    NEQ             reduce using rule 20 (expression -> assign .)
    GE              reduce using rule 20 (expression -> assign .)
    GT              reduce using rule 20 (expression -> assign .)
    ,               reduce using rule 20 (expression -> assign .)

  ! IF              [ reduce using rule 20 (expression -> assign .) ]
  ! FOR             [ reduce using rule 20 (expression -> assign .) ]
  ! (               [ reduce using rule 20 (expression -> assign .) ]
  ! -               [ reduce using rule 20 (expression -> assign .) ]
  ! ABS             [ reduce using rule 20 (expression -> assign .) ]
  ! SIN             [ reduce using rule 20 (expression -> assign .) ]
  ! COS             [ reduce using rule 20 (expression -> assign .) ]
  ! TAN             [ reduce using rule 20 (expression -> assign .) ]
  ! MIN             [ reduce using rule 20 (expression -> assign .) ]
  ! MAX             [ reduce using rule 20 (expression -> assign .) ]
  ! PRINT           [ reduce using rule 20 (expression -> assign .) ]
  ! PRINTLN         [ reduce using rule 20 (expression -> assign .) ]
  ! PRINTF          [ reduce using rule 20 (expression -> assign .) ]
  ! FMT_PRINT       [ reduce using rule 20 (expression -> assign .) ]
  ! FMT_PRINTLN     [ reduce using rule 20 (expression -> assign .) ]
  ! FMT_PRINTF      [ reduce using rule 20 (expression -> assign .) ]
  ! NAME            [ reduce using rule 20 (expression -> assign .) ]
  ! NUMBER          [ reduce using rule 20 (expression -> assign .) ]
  ! SQ_STRING       [ reduce using rule 20 (expression -> assign .) ]
  ! DQ_STRING       [ reduce using rule 20 (expression -> assign .) ]
  ! $end            [ reduce using rule 20 (expression -> assign .) ]
  ! }               [ reduce using rule 20 (expression -> assign .) ]


state 6

    (7) statement -> if_statement .

    IF              reduce using rule 7 (statement -> if_statement .)
    FOR             reduce using rule 7 (statement -> if_statement .)
    (               reduce using rule 7 (statement -> if_statement .)
    -               reduce using rule 7 (statement -> if_statement .)
    ABS             reduce using rule 7 (statement -> if_statement .)
    SIN             reduce using rule 7 (statement -> if_statement .)
    COS             reduce using rule 7 (statement -> if_statement .)
    TAN             reduce using rule 7 (statement -> if_statement .)
    MIN             reduce using rule 7 (statement -> if_statement .)
    MAX             reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    PRINTLN         reduce using rule 7 (statement -> if_statement .)
    PRINTF          reduce using rule 7 (statement -> if_statement .)
    FMT_PRINT       reduce using rule 7 (statement -> if_statement .)
    FMT_PRINTLN     reduce using rule 7 (statement -> if_statement .)
    FMT_PRINTF      reduce using rule 7 (statement -> if_statement .)
    NAME            reduce using rule 7 (statement -> if_statement .)
    NUMBER          reduce using rule 7 (statement -> if_statement .)
    SQ_STRING       reduce using rule 7 (statement -> if_statement .)
    DQ_STRING       reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    }               reduce using rule 7 (statement -> if_statement .)


state 7

    (8) statement -> for .
